# higyrus-client

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
higyrus-vault/: HOME.md
higyrus-vault/.obsidian/: community-plugins.json
higyrus-vault/daily-logs/: 2026-04-23.md  2026-04-24.md
higyrus-vault/knowledge/architecture/: README.md
higyrus-vault/knowledge/python/: README.md
higyrus-vault/knowledge/tools/: Claude Code — CLAUDE.md best practices.md  Obsidian — Este vault.md
higyrus-vault/projects/_templates/: tpl-linear-issue.md
higyrus-vault/projects/higyrus-client/: README.md
higyrus-vault/projects/higyrus-client/decisions/: ADR-001 — Modelos safe-access.md
higyrus-vault/projects/higyrus-client/domain/: Convenciones de query params.md
higyrus_client/: __init__.py  _params.py  client.py  exceptions.py  models.py
scripts/: verify_schemas.py
tests/: conftest.py  test_client.py  test_cuentas.py  test_exceptions.py  test_models.py  test_params.py
